--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,111 @@
+body {
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 500;
+  font-size: 0.9375rem;
+  line-height: 1.6;
+  color: hsl(224, 23%, 55%);
+  background-color: hsl(225, 100%, 98%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("../assets/images/pattern-background-mobile.svg");
+}
+@media screen and (min-width: 600px) {
+  body {
+    font-size: 1rem;
+    background-image: url("../assets/images/pattern-background-desktop.svg");
+  }
+}
 
+.card {
+  width: calc(100vw - 3rem);
+  max-width: 450px;
+  margin: 4rem auto;
+  background-color: white;
+  text-align: center;
+  border-radius: 16px;
+}
+
+.hero-image {
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.panel {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.panel__title {
+  color: hsl(223, 47%, 23%);
+  font-size: 1.375rem;
+  font-weight: 900;
+}
+@media screen and (min-width: 600px) {
+  .panel__title {
+    font-size: 1.75rem;
+  }
+}
+@media screen and (min-width: 600px) {
+  .panel {
+    gap: 2rem;
+  }
+}
+
+.plan {
+  background-color: hsl(225, 100%, 98%);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.plan__group {
+  display: flex;
+  gap: 1rem;
+}
+.plan__type {
+  color: hsl(223, 47%, 23%);
+  font-size: 0.875rem;
+  font-weight: 900;
+}
+@media screen and (min-width: 600px) {
+  .plan__type {
+    font-size: 1rem;
+  }
+}
+.plan__link {
+  color: hsl(245, 75%, 52%);
+  font-size: 0.8125rem;
+  font-weight: 700;
+}
+.plan__link:hover {
+  text-decoration: none;
+}
+@media screen and (min-width: 600px) {
+  .plan__link {
+    font-size: 0.875rem;
+  }
+}
+
+.btn {
+  font-weight: 900;
+  border: none;
+  background-color: hsl(245, 75%, 52%);
+  cursor: pointer;
+}
+.btn--proceed {
+  color: hsl(225, 100%, 98%);
+  border-radius: 0.5rem;
+  padding: 1em;
+  box-shadow: 0 20px 20px 0 hsla(245, 75%, 52%, 0.25);
+}
+.btn--proceed:hover {
+  background-color: hsl(245, 83%, 68%);
+}
+.btn--cancel {
+  color: hsl(224, 23%, 55%);
+  background-color: transparent;
+}
 
 /*# sourceMappingURL=style.css.map */
